# inspect-evals-actions

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: actionlint.yaml  zizmor.yml
.github/workflows/: build.yml  example-use-other-repo.yml  lint-new-evals.yml  run-compat-matrix.yml  run-heavy-tests-windows.yml  run-heavy-tests.yml  run-smoke-test-windows.yml  run-smoke-test.yml  test-slack.yml  workflow-lint.yml
scripts/: send_to_slack.sh
scripts/smoke/: find_stale_skips.sh  summarise_smoke_test_log.sh
